--- a/projects/ng-bootstrap-addons/table/src/table.component.html
+++ b/projects/ng-bootstrap-addons/table/src/table.component.html
@@ -12,7 +12,7 @@
                         $implicit: this,
                         sortField: sortField(),
                         sortDirection: sortDirection(),
-                        onSort: onSort.bind(this)
+                        onSort: onSort.bind(this),
                     }"></ng-container>
                 </thead>
             }
