--- a/projects/ng-bootstrap-addons/table/src/components/table-row-control/table-row-control.component.html
+++ b/projects/ng-bootstrap-addons/table/src/components/table-row-control/table-row-control.component.html
@@ -1,5 +1,34 @@
+<!-- table-row-control.component.html -->
 @if(multiple()){
-    <td style="width: 2rem;"><input type="checkbox" class="form-check-input" [ngModel]="isSelected()" (ngModelChange)="onCheckboxChange($event)"></td>
+    <td style="width: 2rem;">
+        <input type="checkbox" 
+               class="form-check-input" 
+               [ngModel]="isSelected()" 
+               (ngModelChange)="onCheckboxChange($event)">
+    </td>
 }
 <ng-content></ng-content>
-<a href="javascript:void(0);" [class.active]="isSelected()" (click)="onClick()" class="position-absolute top-0 bottom-0 start-0 end-0"></a>
+
+<!-- ✅ Link para clique normal e context menu -->
+<a href="javascript:void(0);" 
+   [class.active]="isSelected()" 
+   (contextmenu)="onRightClick($event)" 
+   (click)="onClick()" 
+   class="position-absolute top-0 bottom-0 start-0 end-0">
+</a>
+
+@if(menuTemplate()) {
+  <nba-context-menu 
+      #contextMenu
+      [menuTemplate]="menuTemplate()!"
+      [autoClose]="true"
+      [closeOnInsideClick]="true"
+      (menuClosed)="onMenuClosed()"
+      (itemClicked)="onMenuItemClicked($event)">
+  </nba-context-menu>
+}
+
+<!-- ✅ Template para o menu -->
+<ng-template #contextMenuTemplate>
+    <ng-content select="[menu]"></ng-content>
+</ng-template>
