feat(table-row-control): add row double-click event handling and clear click timer

--- a/projects/demo/src/app/components/table-sample/table-sample.component.html
+++ b/projects/demo/src/app/components/table-sample/table-sample.component.html
@@ -54,7 +54,7 @@
 
     <ng-template #body let-customers>
       @for(customer of cast(customers); track $index){
-      <tr nbaControl [value]="customer">
+      <tr nbaControl (rowDoubleClick)="onDoubleClick()" [value]="customer">
         <td>{{ customer.id }}</td>
         <td>{{ customer.name }}</td>
         <td>{{ customer.country?.name ?? "" }}</td>
