--- a/projects/ng-bootstrap-addons/table/src/components/table-row-control/table-row-control.component.html
+++ b/projects/ng-bootstrap-addons/table/src/components/table-row-control/table-row-control.component.html
@@ -9,7 +9,7 @@
 }
 <ng-content></ng-content>
 
-<!-- ✅ Link para clique normal e context menu -->
+<!-- Link para clique normal e context menu -->
 <a href="javascript:void(0);" 
    [class.active]="isSelected()" 
    (contextmenu)="onRightClick($event)" 
@@ -28,7 +28,7 @@
   </nba-context-menu>
 }
 
-<!-- ✅ Template para o menu -->
+<!-- Template para o menu -->
 <ng-template #contextMenuTemplate>
     <ng-content select="[menu]"></ng-content>
 </ng-template>
