--- a/projects/demo/src/app/components/ac-search-sample/ac-search-sample.component.html
+++ b/projects/demo/src/app/components/ac-search-sample/ac-search-sample.component.html
@@ -1,10 +1,11 @@
 <app-sample-container tagName="nba-ac-lov">
     <nba-ac-lov
-        label="Search User"
-        byPath
-        acUrl="https://pokeapi.co/api/v2/pokemon"
+        label="Search Movie"
+        [acUrl]="`${environment.OMDb_API.apiUrl}/:imdbID?apikey=${environment.OMDb_API.key}`"
         [map]="mapConfig"
-        [(ngModel)]="selectedPokemon"
+        searchName="s"
+        [(ngModel)]="selectedMovie"
+        [resultPath]="{lov: 'Search'}"
         [required]="true">
     </nba-ac-lov>
 </app-sample-container>
