--- a/projects/ng-bootstrap-addons/inputs/src/date-range-picker/date-range-picker.component.html
+++ b/projects/ng-bootstrap-addons/inputs/src/date-range-picker/date-range-picker.component.html
@@ -5,7 +5,7 @@
             <div class="form-floating can-click" [class]="'form-floating-' + size()">
                 <input
                     class="form-control"
-                    mask="00/00/0000 00:00:00 - 00/00/0000 00:00:00"
+                    [mask]="inputMask()"
                     [id]="inputId()"
                     [name]="inputId()"
                     [class]="inputClass()"
@@ -15,13 +15,13 @@
                         'ng-dirty': control.dirty,
                         'ng-pristine': control.pristine,
                         'ng-untouched': control.untouched,
-                        'ng-valid': (control.valid && control.touched) && textValue.valid,
-                        'ng-invalid': (control.invalid && control.touched) || textValue.invalid,
+                        'ng-valid': (control.valid && control.touched) && textValue().valid,
+                        'ng-invalid': (control.invalid && control.touched) || textValue().invalid,
                     }"
                     [attr.aria-expanded]="!isCollapsed()"
                     (click)="toggleCollapse()"
                     (blur)="markAsTouched()"
-                    [formControl]="textValue"
+                    [formControl]="textValue()"
                 >
                 @if(label() || icon()){
                     <label [for]="inputId()" [class.required]="isRequired">
@@ -42,8 +42,8 @@
             @if(control.invalid){
                 <nba-form-error-message [control]="control"></nba-form-error-message>
             }@else{
-                @if(textValue.invalid){
-                    <nba-form-error-message [control]="textValue"></nba-form-error-message>
+                @if(textValue().invalid){
+                    <nba-form-error-message [control]="textValue()"></nba-form-error-message>
                 }
             }
         </div>
