--- a/projects/ng-bootstrap-addons/table/src/components/context-menu/context-menu.component.html
+++ b/projects/ng-bootstrap-addons/table/src/components/context-menu/context-menu.component.html
@@ -1,5 +1,5 @@
 @if (isVisible()) {
-  <div class="context-menu-overlay" (click)="hide()">
+  <div class="context-menu-overlay" (contextmenu)="$event.stopPropagation(); $event.preventDefault(); hide()" (click)="hide()">
     <ul class="dropdown-menu show" 
         [style.top.px]="position().y" 
         [style.left.px]="position().x"
