--- a/projects/demo/src/app/pages/form-page/components/customer-card-list/customer-card-list.component.html
+++ b/projects/demo/src/app/pages/form-page/components/customer-card-list/customer-card-list.component.html
@@ -1,14 +1,15 @@
 <div class="card">
     <div class="card-header">
         <h2 class="mb-0">Customers</h2>
+        <h3 class="fw-bold">{{state.name}}</h3>
     </div>
     <div class="card-body">
         <ul class="list-group">
-            @for (customer of customers(); track $index) {
+            @for (customer of loadCommand.finalResult(); track $index) {
                 <li class="list-group-item position-relative">
                     <img [alt]="customer.representative?.name" src="https://primefaces.org/cdn/primeng/images/demo/avatar/{{ customer.representative?.image }}" width="32" style="vertical-align: middle" />
                     {{customer.name}}
-                    <a href="javascript:;" class="stretched-link" (click)="editCustomer.emit(customer)"></a>
+                    <a href="javascript:;" class="stretched-link" (click)="editCustomer(customer)"></a>
                 </li>
             }
         </ul>
