--- a/projects/demo/src/app/pages/form-page/form-page.component.html
+++ b/projects/demo/src/app/pages/form-page/form-page.component.html
@@ -2,13 +2,10 @@
     
     <h1 class="fw-bold pb-2 mb-0 border-bottom">Form Example</h1>
 
+    <button type="button" class="btn btn-primary mt-3" (click)="goBack()">Voltar</button>
     <div class="d-flex flex-wrap gap-3 pt-3">
-        <app-customer-card-list
-            [customers]="loadCommand.finalResult()!"
-            (editCustomer)="customer = $event; changeCustomer()"
-        />
         <div class="flex-fill">
-            <app-form-customer></app-form-customer>
+            <router-outlet></router-outlet>
         </div>
     </div>
 
