--- a/projects/demo/src/app/pages/samples/samples.component.html
+++ b/projects/demo/src/app/pages/samples/samples.component.html
@@ -3,6 +3,7 @@
     <h1 class="text-primary fw-bold">Components Apresentation</h1>
     <div class="p-3 border border-black border-opacity-25 rounded-2">
       <h2>Summary</h2>
+      <button type="button" (click)="openList()">Abrir Form</button>
       <table class="table table-striped overflow-hidden rounded-2">
         <thead>
           <tr>
