feat: implement pagination component with template and logic, update table component to use pagination

--- a/projects/demo/src/app/pages/samples/samples.component.html
+++ b/projects/demo/src/app/pages/samples/samples.component.html
@@ -4,7 +4,7 @@
     <div class="p-3 border border-black border-opacity-25 rounded-2">
       <h2>Summary</h2>
       <button type="button" (click)="openList()">Abrir Form</button>
-      <table class="table table-striped overflow-hidden rounded-2">
+      <table class="table table-sm table-striped overflow-hidden rounded-2">
         <thead>
           <tr>
             <th class="col-sm-2">Index</th>
