--- a/projects/ng-bootstrap-addons/table/src/components/column-header/column-header.component.html
+++ b/projects/ng-bootstrap-addons/table/src/components/column-header/column-header.component.html
@@ -1,4 +1,6 @@
-<div class="d-flex align-items-center gap-1 w-100 position-relative">
+<div class="d-flex align-items-center gap-1 w-100 position-relative"
+  dropdown #dropdown="bs-dropdown" [insideClick]="true" container="body"
+>
   
   <ng-content></ng-content>
   
@@ -6,19 +8,19 @@
     <span class="sort-icon fw-bold lh-1">
       @switch(sortDirection()) {
         @case('asc') {
-          <i class="sorted nba-arrow-up"></i>
+          <i class="sorted nba-arrow-up fs-9"></i>
         }
         @case('desc') {
-          <i class="sorted nba-arrow-down"></i>
+          <i class="sorted nba-arrow-down fs-9"></i>
         }
         @default {
-          <i class="nba-arrows-down-up"></i>
+          <i class="nba-arrows-down-up fs-9"></i>
         }
       }
     </span>
     <a (click)="sort()" class="top-0 bottom-0 end-0 start-0 position-absolute" href="javascript:void(0);"></a>
     @if(type() || filter()){
-      <nba-column-filter [type]="type()" (onClearFilter)="removeFilter()" [isFiltered]="isFiltered()" [field]="field()" (filter)="addFilter($event)" [dynamicFilter]="filter()" class="ms-auto z-3" />
+      <nba-column-filter [type]="type()" (onClearFilter)="removeFilter()" [isFiltered]="isFiltered()" [field]="field()" (filter)="addFilter($event)" [dynamicFilter]="filter()" class="ms-auto z-3 d-block" />
     }
   }
 
