--- a/projects/ng-bootstrap-addons/table/src/table.component.html
+++ b/projects/ng-bootstrap-addons/table/src/table.component.html
@@ -27,5 +27,5 @@
             </table>
         </div>
     </div>
-    <nba-pagination [class]="paginated() ? '' : 'd-none'" #pg [list]="processedData()"></nba-pagination>
+    <nba-pagination class="p-3 ms-auto" [class]="paginated() ? '' : 'd-none'" #pg [list]="processedData()"></nba-pagination>
 </div>
