--- a/projects/ng-bootstrap-addons/table/src/components/table-row-control/table-row-control.component.html
+++ b/projects/ng-bootstrap-addons/table/src/components/table-row-control/table-row-control.component.html
@@ -1,6 +1,6 @@
 <!-- table-row-control.component.html -->
 @if(multiple()){
-    <td style="width: 2rem;">
+    <td style="width: 2rem;" class="ps-1">
         <input type="checkbox" 
                class="form-check-input" 
                [ngModel]="isSelected()" 
