--- a/projects/ng-bootstrap-addons/pagination/src/pagination.component.html
+++ b/projects/ng-bootstrap-addons/pagination/src/pagination.component.html
@@ -10,11 +10,9 @@
                 </button>
         </div>
 
-        <div class="d-flex align-items-center gap-1">
-                <input type="number"
-                        class="form-control-plaintext small"
-                        [ngStyle]="{'width': width()}"
-                        style="height: 1em;"
+        <div class="d-flex align-items-center">
+                <nba-input-number
+                        class="m-0 p-0 small"
                         min="1"
                         [max]="totalPages()"
                         [(ngModel)]="currentPage"
