feat: introduce dynamic size input component and update pagination with new input handling

--- a/projects/demo/src/app/pages/samples/samples.component.html
+++ b/projects/demo/src/app/pages/samples/samples.component.html
@@ -14,19 +14,19 @@
         <tbody>
           <tr>
             <td>#1</td>
-            <td><a href="#empty-data">Empty Data Component</a></td>
+            <td><a href="#empty-data">Empty Data</a></td>
           </tr>
           <tr>
             <td>#2</td>
-            <td><a href="#drag-drop">Drag Drop Upload Component</a></td>
+            <td><a href="#drag-drop">Drag Drop Upload</a></td>
           </tr>
           <tr>
             <td>#3</td>
-            <td><a href="#error-message">Form Error Message Component</a></td>
+            <td><a href="#error-message">Form Error Message</a></td>
           </tr>
           <tr>
             <td>#4</td>
-            <td><a href="#input">Input Component</a></td>
+            <td><a href="#input">Input</a></td>
           </tr>
           <tr>
             <td>#5</td>
@@ -34,35 +34,43 @@
           </tr>
           <tr>
             <td>#6</td>
-            <td><a href="#ac-search">Autocomplete Search Component</a></td>
+            <td><a href="#ac-search">Autocomplete Search</a></td>
           </tr>
           <tr>
             <td>#7</td>
-            <td><a href="#date-range-picker">Date Range Picker Component</a></td>
+            <td><a href="#date-range-picker">Date Range Picker</a></td>
           </tr>
           <tr>
             <td>#8</td>
-            <td><a href="#switch">Switch Component</a></td>
+            <td><a href="#switch">Switch</a></td>
           </tr>
           <tr>
             <td>#9</td>
-            <td><a href="#select">Select Component</a></td>
+            <td><a href="#select">Select</a></td>
           </tr>
           <tr>
             <td>#10</td>
-            <td><a href="#multiselect">Multiselect Component</a></td>
+            <td><a href="#multiselect">Multiselect</a></td>
           </tr>
           <tr>
             <td>#11</td>
-            <td><a href="#textarea">Textarea Component</a></td>
+            <td><a href="#textarea">Textarea</a></td>
           </tr>
           <tr>
             <td>#12</td>
-            <td><a href="#label">Label Component</a></td>
+            <td><a href="#label">Label</a></td>
           </tr>
           <tr>
             <td>#13</td>
-            <td><a href="#table">Table Component</a></td>
+            <td><a href="#dynamic-size-input">Dynamic Size Input</a></td>
+          </tr>
+          <tr>
+            <td>#14</td>
+            <td><a href="#pagination">Pagination</a></td>
+          </tr>
+          <tr>
+            <td>#14</td>
+            <td><a href="#table">Table</a></td>
           </tr>
         </tbody>
       </table>
@@ -187,14 +195,14 @@
       <app-label-sample></app-label-sample>
     </section>
 
-    <section id="input-number" class="pb-3 pt-3">
-      <h3 class="fw-bold text-uppercase text-primary">Input Number Component</h3>
+    <section id="dynamic-size-input" class="pb-3 pt-3">
+      <h3 class="fw-bold text-uppercase text-primary">Dynamic Size Input Component</h3>
       <p class="text-muted mb-3">
-        A user-friendly input number component with increment/decrement buttons and validation support. 
-        Features customizable step values, minimum/maximum limits, and seamless integration with Angular forms. 
+        A user-friendly dynamic size input component that adjusts its width based on the content. 
+        Features customizable min/max widths, placeholder support, and seamless integration with Angular forms. 
         Supports Bootstrap styling, keyboard input, and responsive design for a consistent user experience.
       </p>
-      <app-input-number-sample></app-input-number-sample>
+      <app-dynamic-size-input-sample></app-dynamic-size-input-sample>
     </section>
 
     <section id="pagination" class="pb-3 pt-3">
