feat: enhance dynamic size input component with min, max, and step attributes; update pagination integration

--- a/projects/ng-bootstrap-addons/inputs/src/dynamic-size-input/dynamic-size-input.component.html
+++ b/projects/ng-bootstrap-addons/inputs/src/dynamic-size-input/dynamic-size-input.component.html
@@ -1,7 +1,10 @@
 <div class="position-relative">
     @if(control){
         <input
-            type="number"
+            [type]="type()"
+            [min]="min()"
+            [max]="max()"
+            [step]="step()"
             [formControl]="control"
             [class]="inputClass() + ' form-control-plaintext position-absolute top-0 start-0 end-0 bottom-0 p-0'"
             [id]="inputId()"
