--- a/projects/ng-bootstrap-addons/table/src/table.component.html
+++ b/projects/ng-bootstrap-addons/table/src/table.component.html
@@ -27,5 +27,7 @@
             </table>
         </div>
     </div>
-    <nba-pagination class="p-3 ms-auto"[(itemsPerPage)]="itemsPerPage" [(currentPage)]="currentPage" [changeUrl]="syncWithUrl()"  [class]="paginated() ? '' : 'd-none'" #pg [list]="processedData()"></nba-pagination>
+    <div class="py-3 pe-3 ms-auto">
+        <nba-pagination [(itemsPerPage)]="itemsPerPage" [(currentPage)]="currentPage" [changeUrl]="syncWithUrl()"  [class]="paginated() && processedData().length ? '' : 'd-none'" #pg [list]="processedData()"></nba-pagination>
+    </div>
 </div>
