feat: update pagination component to use ngValue for options; enhance pagination directive with dynamic items per page handling

--- a/projects/demo/src/app/components/table-sample/table-sample.component.html
+++ b/projects/demo/src/app/components/table-sample/table-sample.component.html
@@ -2,6 +2,7 @@
   <nba-table #dt
     [multiple]="true"
     [value]="list()"
+    [itemsPerPage]="13"
     [globalFilterFields]="['name', 'country.name', 'representative.name']"
     [(selectedRows)]="selectedRows"
   >
