feat: update empty data component styles and text formatting for improved readability

--- a/projects/ng-bootstrap-addons/components/src/empty-data/empty-data.component.html
+++ b/projects/ng-bootstrap-addons/components/src/empty-data/empty-data.component.html
@@ -60,6 +60,6 @@
             </defs>
         </svg>
     </div>
-    <h2 class="text-center lh-1 h3 mb-0 text-muted">NENHUM REGISTRO</h2>
-    <h6 class="text-primary lh-1 fw-bold h1">ENCONTRADO</h6>
+    <h2 class="text-center lh-1 fs-6 fs-md-5 mb-0 text-muted">NENHUM REGISTRO</h2>
+    <h6 class="text-primary fw-900 lh-1 fw-bold fs-6 fs-md-5">ENCONTRADO</h6>
 </div>
