feat: update pagination component to include queryParamName input; refactor navigation service and add page state management

--- a/projects/ng-bootstrap-addons/table/src/table.component.html
+++ b/projects/ng-bootstrap-addons/table/src/table.component.html
@@ -28,6 +28,6 @@
         </div>
     </div>
     <div class="py-3 pe-3 ms-auto">
-        <nba-pagination [(itemsPerPage)]="itemsPerPage" [(currentPage)]="currentPage" [changeUrl]="syncWithUrl()"  [class]="paginated() && processedData().length ? '' : 'd-none'" #pg [list]="processedData()"></nba-pagination>
+        <nba-pagination [(itemsPerPage)]="itemsPerPage" [queryParamName]="urlParam()" [(currentPage)]="currentPage" [changeUrl]="syncWithUrl()"  [class]="paginated() && processedData().length ? '' : 'd-none'" #pg [list]="processedData()"></nba-pagination>
     </div>
 </div>
