--- a/projects/ng-bootstrap-addons/table/src/components/table-row-control/table-row-control.component.scss
+++ b/projects/ng-bootstrap-addons/table/src/components/table-row-control/table-row-control.component.scss
@@ -1,12 +1,10 @@
 :host{
     position: relative;
-}
-
-a{
-    background-color: transparent;
-    transition: all .2s ease-in-out;
-    &:hover, &.active{
-        background-color: rgba(#2d4383, .05);
-        transition: all .2s ease-in-out;
+    &:not(.disabled){
+        cursor: pointer;
+        &:hover, &.active{
+            background-color: rgba(#2d4383, .05);
+            transition: all .2s ease-in-out;
+        }
     }
 }
