feat: add placeholder text in collapse container of table component

--- a/projects/demo/src/app/components/table-sample/table-sample.component.html
+++ b/projects/demo/src/app/components/table-sample/table-sample.component.html
@@ -69,7 +69,7 @@
         <td>{{customer.date | date: 'dd/MM/yyyy'}}</td>
         <td>{{customer.verified ? 'Sim' : 'Não'}}</td>
         <ng-container collapse>
-          
+          Teste
         </ng-container>
         <ng-container menu>
           <li role="menuitem">
