feat: enhance date range picker and multiselect components with new features and styling improvements

--- a/projects/demo/src/app/components/multiselect-sample/multiselect-sample.component.html
+++ b/projects/demo/src/app/components/multiselect-sample/multiselect-sample.component.html
@@ -1,9 +1,11 @@
 <app-sample-container tagName="nba-multiselect">
-    <nba-multiselect
-        label="Default Multiselect"
-        [formControl]="control"
-        [options]="options"
-    ></nba-multiselect>
+    <div class="col-sm-2">
+        <nba-multiselect
+            label="Default Multiselect"
+            [formControl]="control"
+            [options]="options"
+        ></nba-multiselect>
+    </div>
     <hr>
     Value: {{ control.value }}
 </app-sample-container>
