--- a/projects/demo/src/app/components/date-range-picker-sample/date-range-picker-sample.component.html
+++ b/projects/demo/src/app/components/date-range-picker-sample/date-range-picker-sample.component.html
@@ -1,7 +1,13 @@
 <app-sample-container tagName="nba-datetime-range-input">
-    <nba-date-range-picker
-        label="Data"
-        withTime
-        [(ngModel)]="dateRange"
-    ></nba-date-range-picker>
+    <div class="d-flex justify-content-end">
+        <div class="w-25">
+            <nba-date-range-picker
+                label="Data"
+                withTime
+                [(ngModel)]="dateRange"
+                readonly
+                required
+            ></nba-date-range-picker>
+        </div>
+    </div>
 </app-sample-container>
