--- a/projects/ng-bootstrap-addons/selects/src/multiselect/multiselect.component.html
+++ b/projects/ng-bootstrap-addons/selects/src/multiselect/multiselect.component.html
@@ -3,7 +3,7 @@
       <div class="form-group" [class]="formGroupClass()">
         <div class="input-group">
           <ng-content select="[group-prefix]"></ng-content>
-          <div class="form-floating" [class]="'form-floating-' + size()" dropdown [insideClick]="true">
+          <div class="form-floating" [class]="'form-floating-' + size()" dropdown container="body" [insideClick]="true">
             <select
                 [name]="inputId()"
                 [id]="inputId()"
@@ -19,11 +19,7 @@
                 #input
             >
                 @for(option of filteredOptions(); track option.id){
-                    <option
-                        [value]="option.value"
-                    >
-                        {{option.label}}
-                    </option>
+                    <option [value]="option.value">{{option.label}}</option>
                 }
             </select>
             <input
@@ -35,7 +31,7 @@
                 readonly
             >
             <a href="javascript:;" (click)="this.descControl.markAsTouched()" dropdownToggle class="stretched-link"></a>
-            <ul class="dropdown-menu w-100" *dropdownMenu aria-labelledby="multiSelectDropdown">
+            <ul class="dropdown-menu w-fit-content" *dropdownMenu aria-labelledby="multiSelectDropdown">
                 <li class="mb-2">
                     <input
                         type="text"
